--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,25 +1,27 @@
 [versions]
 agp = "8.5.2"
+cloudflarepass = "0.0.1"
 jsoup = "1.17.2"
 junitJupiter = "5.8.1"
-kotlin = "1.9.0"
+kotlin = "2.0.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
-lifecycleRuntimeKtx = "2.8.2"
-activityCompose = "1.9.0"
-composeBom = "2024.06.00"
+junitVersion = "1.2.1"
+espressoCore = "3.6.1"
+lifecycleRuntimeKtx = "2.8.6"
+activityCompose = "1.9.2"
+composeBom = "2024.09.02"
 appcompat = "1.7.0"
-webkit = "1.11.0"
+webkit = "1.12.0"
 
 ktor="2.3.8"
 logger="6.0.3"
 kotlinx-coroutines="1.7.3"
-jupiter-junit="5.3.1"
+jupiter-junit="5.8.1"
 monitor = "1.7.2"
 
 [libraries]
+cloudflarepass = { module = "com.github.jeluchu:cloudflarepass", version.ref = "cloudflarepass" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
@@ -50,6 +52,7 @@ androidx-monitor = { group = "androidx.test", name = "monitor", version.ref = "m
 [plugins]
 android-library = { id = "com.android.library", version.ref = "agp" }
 android-application = { id = "com.android.application", version.ref = "agp" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 
 [bundles]
@@ -68,4 +71,8 @@ logger = [
 ktor = [
     "ktor-client-core",
     "ktor-client-okhttp"
+]
+
+jeluchu = [
+    "cloudflarepass"
 ]
